changes added in index file

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <a href="#" class=" hover:underline " >Careers</a> 
                     </li>
                 </ul>
-                <a href="#" class=" mr-20px bg-white rounded-full px-7 py-[0.7rem] pr-10px m-7 ml-12 text-sm hover:shadow-lg hover:text-[404EED] " >Login</a>
+                <a href="#" class=" mr-20px bg-white rounded-full px-7 py-[0.7rem] pr-10px m-5 ml-12 text-sm hover:shadow-lg hover:text-[404EED] " >Login</a>
             </div>
         </nav>
 
@@ -57,9 +57,9 @@
             <div class=" flex flex-col gap-8 relative justify-center items-center text-white container max-w-[1200px] xl:px-0 px-7 xl:max-w-[900px] mx-auto text-center xl:h-[555px] pb-[50px] pt-[10px] " >
                 <h2 class=" z-20 font-[800] text-left xl:text-center text-[34px] md:text-[56px]
                 font-['GintoNord'] mt-12" >IMAGINE A PLACE...</h2>
-                <p class="text-base text-left xl:text-center text-[10px] md:text-[30px] leading-[26px] md:leading-[32.5px] font-['ggSans'] w-[40%] md:w-[70%] xl:w-[100%] z-20  mb-20 mt-10 font-[20px]" >...where you can belong to a school club, a gaming group, or a worldwide art community. Where just you and a handful of friends can spend time together. A place that makes it easy to talk every day and hang out more often.</p>
+                <p class="text-base text-left xl:text-center text-[10px] md:text-[30px] leading-[26px] md:leading-[32.5px] font-['ggSans'] w-[40%] md:w-[70%] xl:w-[100%] z-20 mt-10px mb-20 mb-20 font-[10px]" >...where you can belong to a school club, a gaming group, or a worldwide art community. Where just you and a handful of friends can spend time together. A place that makes it easy to talk every day and hang out more often.</p>
                 
-                <div class="mb-7 hidden xl:flex items-center justify-between gap-6 font-[500] z-20 " >
+                <div class="mb-7 hidden xl:flex items-center justify-between gap-6 font-[500] z-20 mb-20px" >
                     <a href="#" class=" bg-white text-black rounded-full hover:shadow-lg font-['ggSans'] hover:text-[#404EED] p-5 px-12 text-xl mt-5 " >
                         <i class="fa-solid fa-download mr-2"></i>
                         Download for Windows
